Added changes dcumentation

--- a/Changes
+++ b/Changes
@@ -16,3 +16,7 @@
 		documentation.
 
 		New symbol list feature as well as search.
+
+1.09    Jul 3, 2025
+
+        Automatic version handling improved.
