Improved option output

--- a/Changes
+++ b/Changes
@@ -44,3 +44,7 @@
 1.14    Jul 10, 2025
 
         Improved "--help" output
+
+1.15    Jul 20, 2025
+
+        Improve Token, Help and Symbols output
