Updateed the change log.

--- a/Changes
+++ b/Changes
@@ -71,3 +71,7 @@
 
         Help and symbol output overhaul and more Unicode characters when
 		--full is used.
+
+1.23    Aug 19, 2025
+
+        More visual improvements with options output
