Added a note to HISTORY

--- a/HISTORY
+++ b/HISTORY
@@ -27,3 +27,6 @@ statements.  This makes pipes etc, easy to do.
 
 I use this utility myself for making colorful banners for various servers I
 work with.
+
+NOTE:  I actually fixed the network problem I mentioned above.  I may just
+       finish the BBS program... eventually.
