--- a/Changes
+++ b/Changes
@@ -75,3 +75,8 @@
 1.23    Aug 19, 2025
 
         More visual improvements with options output
+
+1.24    Aug 23, 2025
+
+        Fixed issue not opening text files in binary mode for special unicode
+		letters.
