Fixed some complaining by CPAN testers.

--- a/Changes
+++ b/Changes
@@ -84,3 +84,8 @@
 1.25    Aug 27, 2025
 
         Improved testing
+
+1.26    Aug 28, 2025
+
+        Apparently my new testing methodology ticked off some CPAN testers.
+		So I'll relax them a bit.
