--- a/Changes
+++ b/Changes
@@ -89,3 +89,6 @@
 
         Apparently my new testing methodology ticked off some CPAN testers.
 		So I'll relax them a bit.
+
+        Changed the license.
+
