--- a/Changes
+++ b/Changes
@@ -92,3 +92,9 @@
 
         Changed the license.
 
+1.27    Aug 10, 2025
+
+        Fixed a runaway loop in "-t" output.
+		
+		Removed the "one character at a time" output left over from the
+		old BBS Universal code.  Output is much faster now.
