--- a/Changes
+++ b/Changes
@@ -98,3 +98,7 @@
 		
 		Removed the "one character at a time" output left over from the
 		old BBS Universal code.  Output is much faster now.
+
+1.28    Aug 10, 2025
+
+        Updated the documentation to be better informative on CPAN.
