Eliminated character hash, increased speed

--- a/Changes
+++ b/Changes
@@ -106,3 +106,8 @@
 1.29    Sept 26, 2025
 
         More tokens and RGB color handling.
+
+1.30    Oct 06, 2025
+
+        Eliminated the need for unicode hash values
+
