--- a/Changes
+++ b/Changes
@@ -122,3 +122,7 @@
 1.33    Oct 18, 2025
 
         Added a plethora of colors
+
+1.34    Oct 20, 2025
+
+        Fixed some POD issues and fixed HORIZONTAL RULE handling.
