--- a/Changes
+++ b/Changes
@@ -126,3 +126,8 @@
 1.34    Oct 20, 2025
 
         Fixed some POD issues and fixed HORIZONTAL RULE handling.
+
+1.35    Oct 22, 2025
+
+        Fixed ALL POD issues.  Ugh.
+
