Added more frame styles

--- a/Changes
+++ b/Changes
@@ -144,3 +144,7 @@
 		Unicode output defaults to a squashed output and the new "expanded"
 		option will show dividers between each row to better discern symbol
 		output.
+
+1.38    Oct 30, 2025
+
+        Added more frame styles
