--- a/Changes
+++ b/Changes
@@ -152,3 +152,8 @@
 1.39    Oct 30, 2025
 
         Added even more frame styles
+
+1.40    Nov 02, 2025
+
+        The "expanded" option is removed.  It now depends on the COLORTERM
+		environment variable and the "truecolor" value.
