Minor spelling changes

--- a/Changes
+++ b/Changes
@@ -235,3 +235,7 @@
 1.56    Dec 18, 2025
 
         Revamped the module to make the source easy to read.
+
+1.57    Dec 22, 2025
+
+        Minor changes.
