Fixed bugs and typos

--- a/Changes
+++ b/Changes
@@ -247,3 +247,15 @@
 1.59    Dec 27, 2025
 
         More memory friendly.
+
+		THIS VERSION WAS REMOVED
+
+1.60    Dec 28, 2025
+
+        Yikes!  1.59 had bugs.  I could swear it worked, but obviously it had issues.
+		There were also typos in the manual page.
+
+        Hopefully all of the bugs, typos and other issues are fixed now.
+
+        Note, in the "-t" or "--tokens" option of the "ansi-encode" executable,
+		the labeling of the colors are changed.
