--- a/Changes
+++ b/Changes
@@ -266,3 +266,7 @@
 		"ansi-encode" script.
 
 		Updated the manual page.
+
+1.62    Jan 03, 2026
+
+        DEFAULT color description for foreground/background corrected.
