Compacted the color list

--- a/Changes
+++ b/Changes
@@ -281,3 +281,7 @@
 
         Moved the color list to the library and removed from the main script.
 		Improved the color list.
+
+1.70    Jan 13, 2026
+
+        Compacted color listing
