Color list fits on narrow screens

--- a/Changes
+++ b/Changes
@@ -285,3 +285,7 @@
 1.70    Jan 13, 2026
 
         Compacted color listing
+
+1.71    Jan 13, 2026
+
+        Color listing will fix on narrow screens.
