--- a/Changes
+++ b/Changes
@@ -311,3 +311,7 @@
 1.76    Jan 14, 2026
 
         Improved ansi_colors and color format detection improvements.
+
+1.77    Jan 14, 2026
+
+        Corrected terminal type color capability and added a new method.
