--- a/Changes
+++ b/Changes
@@ -332,3 +332,7 @@
 1.81    Jan 17, 2026
 
         Color list handles 3,4,8 and 24 bit recognition correctly
+
+1.82    Jan 17, 2026
+
+        Removed the need for Term::ANSIColor in the module.
