--- a/Changes
+++ b/Changes
@@ -336,3 +336,7 @@
 1.82    Jan 17, 2026
 
         Removed the need for Term::ANSIColor in the module.
+
+1.83    Jan 18, 2026
+
+        Removed the need for Term::ANSIScreen.
