--- a/Changes
+++ b/Changes
@@ -340,3 +340,7 @@
 1.83    Jan 18, 2026
 
         Removed the need for Term::ANSIScreen.
+
+1.84    Jan 19, 2026
+
+        Minor changes in the executable.
