--- a/Changes
+++ b/Changes
@@ -344,3 +344,7 @@
 1.84    Jan 19, 2026
 
         Minor changes in the executable.
+
+1.85    Jan 19, 2026
+
+        Many changes to Makefile.PL, README.md and ansi-encode
