Example images added

--- a/Changes
+++ b/Changes
@@ -367,3 +367,7 @@
 		require a wide terminal.
 
         New tokens added
+
+1.90    Feb 17, 2026
+
+        Added image examples to README.me in "examples" directory
